--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 </head>
 <body>
 
-    <h1>Mã hóa văn bản bằng Emoji</h1>
+    <h1>Emoji_Encoder_NQA</h1>
     <div class="container">
         <textarea id="inputText" placeholder="Nhập văn bản của bạn ở đây..."></textarea>
         <div class="button-container">
